apps/guppy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guppy
  namespace: nori-cloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guppy
  template:
    metadata:
      labels:
        app: guppy
    spec:
      containers:
        - image: ghcr.io/nori-cloud/guppy:sha-080b9b22e3a26e9f40bcbffdaaba75ed83399f6a
          name: guppy
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-image-pull-secret
