apps/guppy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guppy
  namespace: nori-cloud
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: guppy
