apps/guppy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guppy
  namespace: nori-cloud
  labels:
    app: guppy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guppy.norriswu.me`)
      kind: Rule
      services:
        - name: guppy
          port: 3000
